--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <p>Hi everyone! My name is Kelly.</p>
-    <p>I have a dog named Zoey.</p>
+    <p>I have a dog named Zoey.  I love Fighting Irish Football and mexican food.</p>
 </body>
 	
 	
