--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>My Webpage</title>
 </head>
 <body>
+	<h1>My Personal Page</h1>
+	<img scr="http://www3.nd.edu/~kgsa/springmainbd.jpg">
     <p>Hi everyone! My name is Kelly.</p>
     <p>I have a dog named Zoey.  I love Fighting Irish Football and mexican food.</p>
 </body>
