--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Webpage</title>
+    <title>Kelly Kapshandy</title>
 </head>
 <body>
 	<h1>My Personal Page</h1>
 	<img scr="http://www3.nd.edu/~kgsa/springmainbd.jpg">
     <p>Hi everyone! My name is Kelly.</p>
-    <p>I have a dog named Zoey.  I love Fighting Irish Football and mexican food.</p>
-</body>
-	
-	
-	
+    <p>I have a dog named Zoey.  I love Fighting Irish Football and Mexican food.</p>
+</body>	
 </html>
