--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 	<h1>My Personal Page</h1>
 	<h2>About me</h2>
-	<img src="http://www.nd.edu/visitors/sights-sounds/assets/wallpapers/dome-aerial-1280x800.jpg" />
+	<img src="http://tour.nd.edu/assets/130185/original/dome4_lg.jpg />
     <p>Hi everyone! My name is Kelly.</p>
     <p>I have a dog named Zoey.  I love Fighting Irish Football and Mexican food.</p>
     <p>I live in <a href="http://en.wikipedia.org/wiki/Chicago">Chicago!</a>
