--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<h1>My Personal Page</h1>
 	<h2>About me</h2>
 	<img src="http://tour.nd.edu/assets/130185/original/dome4_lg.jpg" />
+	<a href="http://www.und.com/" <img src="http://tour.nd.edu/assets/130185/original/dome4_lg.jpg" /> </a>
     <p>Hi everyone! My name is Kelly.</p>
     <p>I have a dog named Zoey.  I love Fighting Irish Football and Mexican food.</p>
     <p>I live in <a href="http://en.wikipedia.org/wiki/Chicago">Chicago!</a>
