--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <p>Hi everyone! My name is Kelly.</p>
     <p>I have a dog named Zoey.  I love Fighting Irish Football and Mexican food.</p>
     <p>I live in <a href="http://en.wikipedia.org/wiki/Chicago" target="_blank">Chicago</a>.</p>
-    <p>Check out my favorite song, <a href="https://www.youtube.com/watch?v=0zCD4QC7Pyo">Layla</a><br>You can find the backstory <a href="http://en.wikipedia.org/wiki/Layla">here</a></p>
+    <p>Check out my favorite song, <a href="https://www.youtube.com/watch?v=0zCD4QC7Pyo">Layla</a>.<br>You can find the backstory <a href="http://en.wikipedia.org/wiki/Layla">here</a><./p>
 </body>	
 </html>
