--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <p>I have a dog named Zoey.  I love Fighting Irish Football and Mexican food.</p>
     <p>I live in <a href="http://en.wikipedia.org/wiki/Chicago" target="_blank">Chicago</a>.</p>
     <p>Check out my favorite song, <a href="https://www.youtube.com/watch?v=0zCD4QC7Pyo">Layla</a>.<br>You can find the backstory <a href="http://en.wikipedia.org/wiki/Layla">here</a>.</p>
+    <p>What'll you do when you get lonely<br>And nobody's waiting by your side?<br>You've been running and hiding much too long.<br>You know it's just your foolish pride.</p>
+   
 </body>	
 </html>
