--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>I live in <a href="http://en.wikipedia.org/wiki/Chicago" target="_blank">Chicago</a>.</p>
     <p>Check out my favorite song, <a href="https://www.youtube.com/watch?v=0zCD4QC7Pyo">Layla</a>.<br>You can find the backstory <a href="http://en.wikipedia.org/wiki/Layla">here</a>.</p>
     <p>What'll you do when you get lonely<br>And nobody's waiting by your side?<br>You've been running and hiding much too long.<br>You know it's just your foolish pride.</p>
-   
+  	<h2>This is Zoey</h2>
+  	<img src="https://www.facebook.com/photo.php?fbid=10101345015729547&set=pb.5611430.-2207520000.1409542472.&type=3&theater" />
 </body>	
 </html>
