--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <p>What'll you do when you get lonely<br>And nobody's waiting by your side?<br>You've been running and hiding much too long.<br>You know it's just your foolish pride.</p>
   	<h2>This is Zoey</h2>
   	<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xfp1/t1.0-9/10583839_10101345015729547_4354414626336152330_n.jpg" />
+  	<img src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-xpf1/v/t1.0-9/10264951_10101334840361067_5625081224365922366_n.jpg?oh=c8cf098126c30e7b8883f7d4dfd2fd74&oe=547885EB&__gda__=1415728788_90dc7ffa6cbbab910608277ac08beb17" />
 </body>	
 </html>
