--- a/index.html
+++ b/index.html
@@ -6,17 +6,24 @@
 <body>
 	<h1>My Personal Page</h1>
 	<h2>About me</h2>
+   <nav id='top-menu'>
+      <ul class='menu'>
+        <li><a href="http://www.goodhousekeeping.com" target="_blank">Good Housekeeping</a></li>
+        <li><a href="Http://www.linkedin.com/in/kellykapshandy" target="_blank">LinkedIn</a></li>
+      </ul>
+      </nav>
 	<a href="http://www.nd.edu/" target="_blank"> <img src="http://tour.nd.edu/assets/130185/original/dome4_lg.jpg" /> </a>
     <p>Hi everyone! My name is Kelly.</p>
     <p>I have a dog named Zoey.  I love Fighting Irish Football and Mexican food.</p>
-    <ol>Places I've been to
+    <ul>Places I've been to
         <li>France</li>
         <li>Ireland</li>
         <li>Italy</li>
         <li>Mexico</li>
         <li>Canada</li>
-      </ol>
+      </ul>
     <p>I live in <a href="http://en.wikipedia.org/wiki/Chicago" target="_blank">Chicago</a>.</p>
+    <h2>Music</h2>
     <p>Check out my favorite song, <a href="https://www.youtube.com/watch?v=0zCD4QC7Pyo">Layla</a>.<br>You can find the backstory <a href="http://en.wikipedia.org/wiki/Layla">here</a>.</p>
     <p>What'll you do when you get lonely<br>And nobody's waiting by your side?<br>You've been running and hiding much too long.<br>You know it's just your foolish pride.</p>
   	<h2>This is Zoey</h2>
