--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
 	<a href="http://www.nd.edu/" target="_blank"> <img src="http://tour.nd.edu/assets/130185/original/dome4_lg.jpg" /> </a>
     <p>Hi everyone! My name is Kelly.</p>
     <p>I have a dog named Zoey.  I love Fighting Irish Football and Mexican food.</p>
-    <ul>Places I've been to
-        <li>France</li>
-        <li>Ireland</li>
-        <li>Italy</li>
-        <li>Mexico</li>
-        <li>Canada</li>
-      </ul>
     <p>I live in <a href="http://en.wikipedia.org/wiki/Chicago" target="_blank">Chicago</a>.</p>
-    <h2>Music</h2>
-    <p>Check out my favorite song, <a href="https://www.youtube.com/watch?v=0zCD4QC7Pyo">Layla</a>.<br>You can find the backstory <a href="http://en.wikipedia.org/wiki/Layla">here</a>.</p>
+   <h3>Places I've been to</h3>
+        <ul>
+        <li><a href="http://en.wikipedia.org/wiki/France" target="blank">France<a/></li>
+        <li><a href="http://en.wikipedia.org/wiki/Ireland" target="blank">Ireland<a/></li>
+        <li><a href="http://en.wikipedia.org/wiki/Italy" target="blank">Italy<a/></li>
+        <li><a href="http://en.wikipedia.org/wiki/Mexico" target="blank">Mexico<a/></li>
+        <li><a href="http://en.wikipedia.org/wiki/Canada" target="blank">Canada<a/></li>
+      </ul>
+    <h3>Music</h3>
+    <p>Check out my favorite song, <a href="https://www.youtube.com/watch?v=0zCD4QC7Pyo">Layla</a>.<br>You can find the backstory <a href="http://en.wikipedia.org/wiki/Layla" target="blank">here</a>.</p>
     <p>What'll you do when you get lonely<br>And nobody's waiting by your side?<br>You've been running and hiding much too long.<br>You know it's just your foolish pride.</p>
   	<h2>This is Zoey</h2>
   	<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xfp1/t1.0-9/10583839_10101345015729547_4354414626336152330_n.jpg" />
