--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="style.css"/>
     <title>Kelly Kapshandy</title>
 </head>
 <body>
@@ -9,13 +10,15 @@
       <ul class='menu'>
         <li><a href="http://www.goodhousekeeping.com" target="_blank">Good Housekeeping</a></li>
         <li><a href="Http://www.linkedin.com/in/kellykapshandy" target="_blank">LinkedIn</a></li>
+        <li><a href="Http://www.kellykapshandy.com/blog" target="_blank">Blog</a></li>
       </ul>
       </nav>
 	<h2>About me</h2>
-	<a href="http://www.nd.edu/" target="_blank"> <img src="http://tour.nd.edu/assets/130185/original/dome4_lg.jpg" /> </a>
+	<a href="http://www.nd.edu/" target="_blank"> <img src="Images/Dome.jpg" /> </a>
     <p>Hi everyone! My name is Kelly.</p>
     <p>I have a dog named Zoey.  I love Fighting Irish Football and Mexican food.</p>
     <p>I live in <a href="http://en.wikipedia.org/wiki/Chicago" target="_blank">Chicago</a>.</p>
+   <div class="firstdiv">
    <h3>Places I've been to</h3>
         <ul>
         <li><a href="http://en.wikipedia.org/wiki/France" target="blank">France<a/></li>
@@ -24,11 +27,12 @@
         <li><a href="http://en.wikipedia.org/wiki/Mexico" target="blank">Mexico<a/></li>
         <li><a href="http://en.wikipedia.org/wiki/Canada" target="blank">Canada<a/></li>
       </ul>
+    </div>
     <h3>Music</h3>
     <p>Check out my favorite song, <a href="https://www.youtube.com/watch?v=0zCD4QC7Pyo">Layla</a>.<br>You can find the backstory <a href="http://en.wikipedia.org/wiki/Layla" target="blank">here</a>.</p>
     <p>What'll you do when you get lonely<br>And nobody's waiting by your side?<br>You've been running and hiding much too long.<br>You know it's just your foolish pride.</p>
   	<h2>This is Zoey</h2>
-  	<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xfp1/t1.0-9/10583839_10101345015729547_4354414626336152330_n.jpg" />
+  	<img src="Images/zoeysleep.jpg" />
   	<img src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-xpf1/v/t1.0-9/10264951_10101334840361067_5625081224365922366_n.jpg?oh=c8cf098126c30e7b8883f7d4dfd2fd74&oe=547885EB&__gda__=1415728788_90dc7ffa6cbbab910608277ac08beb17" />
 </body>	
 </html>
