--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <ul class='menu'>
         <li><a href="http://www.goodhousekeeping.com" target="_blank">Good Housekeeping</a></li>
         <li><a href="Http://www.linkedin.com/in/kellykapshandy" target="_blank">LinkedIn</a></li>
-        <li><a href="Http://www.kellykapshandy.com/blog" target="_blank">Blog</a></li>
+        <li><a href="Http://www.kellykapshandy.com/Blog" target="_blank">Blog</a></li>
       </ul>
       </nav>
 	<h2>About me</h2>
