--- a/About/index.html
+++ b/About/index.html
@@ -6,6 +6,12 @@
 
 <h1>About Me</h1>
 
+<nav>
+    <a href="http://www.goodhousekeeping.com" target="_blank">Good Housekeeping</a>
+    <a href="Http://www.linkedin.com/in/kellykapshandy" target="_blank">LinkedIn</a>
+    <a href="Http://www.kellykapshandy.com/Blog" target="_blank">Blog</a>
+</nav>
+
 <body>
     <h2>Animals I Like</h2>
 	<ul>
