--- a/Coffee/index.html
+++ b/Coffee/index.html
@@ -4,12 +4,24 @@
 	<title>Practice List</title>
 </head>
 
+<a id="top"></a>
 <nav>
 	<ul class='menu'>
-        <li><a href="http://www.kellykapshandy.com/About" target="_blank">About</a></li>
+        <li><a href="http://www.kellykapshandy.com/About" target="_blank">About Me</a></li>
         <li><a href="Http://www.kellykapshandy.com/Blog" target="_blank">Blog</a></li>
     </ul>
 </nav>
+
+<img src="Images/touchdownjesus.jpg" />
+
+
+
+<div>
+	<p>Learn about Notre Dame Football</p>
+	<a href="#gipper">Gipper<a/>
+	<a href="#lou">Lou Holtz<a/>
+	<a href="#brian">Brian Kelly<a/>
+
 
 <body>
 	<ul>
@@ -17,5 +29,28 @@
         <li>Monkey</li>
         <li>Otter</li>
     </ul>
+
+
+
+<div>
+	<a id="gipper"></a>
+<h2>The Gipper</h2>
+<p>Among the events that occurred during Rockne’s tenure none may be more famous than the Rockne’s Win one for the Gipper speech. George "the Gipper" Gipp was a consensus All-American player on Rockne’s earlier teams who died of strep throat in 1920. Army came into the 1928 matchup undefeated and was the clear favorite. Notre Dame, on the other hand, was having their worst season under Rockne’s leadership and entered the game with a 4–2 record. At the end of the half Army was leading and looked to be in command of the game. Rockne entered the locker room and gave his account of Gipp’s final words: "I've got to go, Rock. It's all right. I'm not afraid. Some time, Rock, when the team is up against it, when things are going wrong and the breaks are beating the boys, tell them to go in there with all they've got and win just one for the Gipper. I don't know where I'll be then, Rock. But I'll know about it, and I'll be happy." The speech inspired the team and they went on to upset Army and win the game 12–6.</p>
+<a href="#top">back to top!</a>
+<div>
+
+<div>
+<h2>Lou Holtz</h2>
+	<a id="lou"></a>
+<p>Lou Holtz had 17 years of coaching experience by the time he was hired to lead the Irish. He had previously been head coach of William & Mary, North Carolina State, the New York Jets, Arkansas, and Minnesota. Holtz began in 1986 where his predecessor left off in 1985, finishing with an identical record of 5 wins and 6 losses. However, unlike the 1985 squad, which was generally outcoached and outplayed, Holtz's 1986 edition was competitive in nearly every game, losing five out of those six games by a combined total of 14 points. That would be his only losing season as he posted a record of 95–24–2 over the next ten seasons adding up to a 100–30–2 docket overall.</p>
+<a href="#top">back to top!</a>
+<div>
+
+<div>
+	<a id="brian"></a>
+<p>Brian Kelly became the 31st head coach of the Fighting Irish on December 10, 2009, after coaching Cincinnati to a 12–0 record and BCS bowl-game berth.  In his first season, Kelly led the Fighting Irish to an 8-5 record. Tragedy struck early in the season when Declan Sullivan, a junior working for the athletic department, died while filming a practice on a scissor lift in dangerously high winds. Dayne Crist started the season at quarterback but was injured for a second consecutive year, this time in the Tulsa game. Kelly turned to freshman quarterback Tommy Rees, who led the Irish to victories in the last three games against #14 Utah, Army in Yankee Stadium, and breaking an eight-year losing streak to USC in the LA Coliseum.[38] Kelly guided the Irish to a 33-17 win over Miami (FL) in the 2010 Sun Bowl to finish 2010 with an 8-5 record.With senior wide out Michael Floyd returning for his senior season and an outstanding recruiting class that included several highly touted defensive linemen, Kelly and the Irish looked to improve on their 8-5 record from the prior year. However, an early season upset to a Skip Holtz-led South Florida team, and a last second loss to Michigan in Ann Arbor left the Irish at 0-2 to start the season. The Irish bounced back to beat #15 Michigan State and had two 4-game winning-streaks, with the only loss during that stretch coming at the hands of the USC Trojans. The Irish also broke Navy's 2-game winning streak over Notre Dame (2009–10). Notre Dame finished the season with an 8–4 record but lost 18 – 14 to Florida State in the 2011 Champs Sports Bowl,[41][42] concluding the 2011 campaign with and 8-5 record overall, identical to the 2010 season. In the team's losses, multiple turnovers from the quarterback position were often the culprit, and as a whole turnovers at critical times in the game often derailed potential Irish comebacks.</p>
+<a href="#top">back to top!</a>
+<div>
+
 </body>
 </html>
