--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <li><a href="http://www.kellykapshandy.com/About" target="_blank">About Me</a></li>
       </ul>
       </nav>
+
+<a href="./About" target="_blank">About Me</a>
+
+      
 	<h2>About me</h2>
 	<a href="http://www.nd.edu/" target="_blank"> <img src="Images/Dome.jpg" /> </a>
     <p>Hi everyone! My name is Kelly.</p>
