--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </ul>
       </nav>
 
-<a href="./About" target="_blank">About Me</a>
+<a href="./Contact" target="_blank">Contact</a>
 
       
 	<h2>About me</h2>
