--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
       <ul class='menu'>
         <li><a href="http://www.goodhousekeeping.com" target="_blank">Good Housekeeping</a></li>
         <li><a href="Http://www.linkedin.com/in/kellykapshandy" target="_blank">LinkedIn</a></li>
-        <li><a href="Http://www.kellykapshandy.com/Blog" target="_blank">Blog</a></li>
-        <li><a href="http://www.kellykapshandy.com/About" target="_blank">About Me</a></li>
+        <li><a href="./Blog" target="_blank">Blog</a></li>
+        <li><a href="./About" target="_blank">About Me</a></li>
+        <li><a href="./Contact" target="_blank">Contact</a></li>
       </ul>
       </nav>
-
-<a href="./Contact" target="_blank">Contact</a>
 
       
 	<h2>About me</h2>
