--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="./Blog" target="_blank">Blog</a></li>
         <li><a href="./About" target="_blank">About Me</a></li>
         <li><a href="./Contact" target="_blank">Contact</a></li>
+        <li><a href="./Coffee" target="_blank">Anchor Test Page</a></li>
       </ul>
       </nav>
 
