--- a/Coffee/index.html
+++ b/Coffee/index.html
@@ -4,6 +4,8 @@
 	<title>Practice List</title>
 </head>
 
+<h2>Learn about Notre Dame Football</h2>
+
 <a id="top"></a>
 <nav>
 	<ul class='menu'>
@@ -12,16 +14,12 @@
     </ul>
 </nav>
 
-<img src="Images/touchdownjesus.jpg" />
-
-
-
 <div>
-	<p>Learn about Notre Dame Football</p>
 	<a href="#gipper">Gipper<a/>
 	<a href="#lou">Lou Holtz<a/>
-	<a href="#brian">Brian Kelly<a/>
+	<a href="#brian">Brian Kelly<a/><br>
 
+<img src="Images/touchdownjesus.jpg" />
 
 <body>
 	<ul>
