--- a/blogtest/index.html
+++ b/blogtest/index.html
@@ -4,7 +4,27 @@
 	<title>Blog</title>
 	<link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
+
 <body>
 
+<div class='pageheader'>
+	<h1>Let's make the best of this situation</h1>
+	<h2>Before I finally go insane</h2>
+</div>
 
+<nav class='navtest'>
+	<a class='anav' href="../Blog" target="_blank">Blog</a>
+    <a class='anav' href="../About" target="_blank">About Me</a>
+    <a class='anav' href="../Contact" target="_blank">Contact</a>
+    <a class='anav' href="../Coffee" target="_blank">Anchor Test Page</a>
+</nav>
+
+
+
+
+
+<br>
+<div class='footer'>
+Created by Kelly Kapshandy
+</div>
 </body>
