--- a/index.html
+++ b/index.html
@@ -1,43 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="style.css"/>
-    <title>Kelly Kapshandy</title>
+	<title>Kelly Kapshandy</title>
+	<link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
-<body>
-	<h1>My Personal Page</h1>
-     <nav id='top-menu'>
-      <ul class='menu'>
-        <li><a href="http://www.goodhousekeeping.com" target="_blank">Good Housekeeping</a></li>
-        <li><a href="Http://www.linkedin.com/in/kellykapshandy" target="_blank">LinkedIn</a></li>
-        <li><a href="./Blog" target="_blank">Blog</a></li>
-        <li><a href="./About" target="_blank">About Me</a></li>
-        <li><a href="./Contact" target="_blank">Contact</a></li>
-        <li><a href="./Coffee" target="_blank">Anchor Test Page</a></li>
-      </ul>
-      </nav>
 
-      
-	<h2>About me</h2>
-	<a href="http://www.nd.edu/" target="_blank"> <img src="Images/Dome.jpg" /> </a>
-    <p>Hi everyone! My name is Kelly.</p>
-    <p>I have a dog named Zoey.  I love Fighting Irish Football and Mexican food.</p>
-    <p>I live in <a href="http://en.wikipedia.org/wiki/Chicago" target="_blank">Chicago</a>.</p>
-   <div class="firstdiv">
-   <h3>Places I've been to</h3>
-        <ul>
-        <li><a href="http://en.wikipedia.org/wiki/France" target="blank">France<a/></li>
-        <li><a href="http://en.wikipedia.org/wiki/Ireland" target="blank">Ireland<a/></li>
-        <li><a href="http://en.wikipedia.org/wiki/Italy" target="blank">Italy<a/></li>
-        <li><a href="http://en.wikipedia.org/wiki/Mexico" target="blank">Mexico<a/></li>
-        <li><a href="http://en.wikipedia.org/wiki/Canada" target="blank">Canada<a/></li>
-      </ul>
-    </div>
-    <h3>Music</h3>
-    <p>Check out my favorite song, <a href="https://www.youtube.com/watch?v=0zCD4QC7Pyo">Layla</a>.<br>You can find the backstory <a href="http://en.wikipedia.org/wiki/Layla" target="blank">here</a>.</p>
-    <p>What'll you do when you get lonely<br>And nobody's waiting by your side?<br>You've been running and hiding much too long.<br>You know it's just your foolish pride.</p>
-  	<h2>This is Zoey</h2>
-  	<img src="Images/zoeysleep.jpg" />
-  	<img src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-xpf1/v/t1.0-9/10264951_10101334840361067_5625081224365922366_n.jpg?oh=c8cf098126c30e7b8883f7d4dfd2fd74&oe=547885EB&__gda__=1415728788_90dc7ffa6cbbab910608277ac08beb17" />
-</body>	
-</html>
+<body>
+
+<div class='pageheader'>
+	<h1>Let's make the best of this situation</h1>
+	<h2>Before I finally go insane</h2>
+</div>
+
+<nav class='navigation'>
+<ul>
+	<li> <a href="./Blog" target="_blank">Blog</a> </li>
+    <li> <a href="./About" target="_blank">About Me</a> </li>
+    <li> <a href="./Contact" target="_blank">Contact</a> </li>
+    <li> <a href="./resume" target="_blank">Resume</a> </li>
+</ul>
+</nav>
+
+<div class='blog'>
+	<h3>It's all greek to me</h3>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vel accumsan nisi. Phasellus molestie tortor mauris, quis consequat risus congue vel. Proin ac eros justo. Sed ullamcorper nec dolor ac finibus. Sed ut orci aliquam, pellentesque odio faucibus, tristique nibh. Praesent faucibus mollis ante, sit amet ullamcorper urna interdum at. Quisque malesuada dui risus, vitae blandit mauris facilisis eu. Donec quis tellus laoreet, viverra mauris nec, semper mi. Maecenas malesuada blandit dui non aliquam. Duis dapibus cursus augue a efficitur. Nam a vulputate leo. Ut sed elementum sem. Mauris at risus ut nulla dignissim pretium. In at dolor eu dui lobortis tempor a vel sapien.  Fusce sodales, nisi vitae eleifend suscipit, mauris sapien facilisis metus, sed pulvinar odio lacus in ligula. Pellentesque elementum sit amet felis ac ornare. Nunc interdum mauris augue. Praesent condimentum blandit ligula vel aliquet. Curabitur nunc eros, interdum ut maximus quis, interdum sit amet lacus. Sed at metus vitae augue suscipit eleifend eget ac elit. Cras tempor rutrum porttitor. Aliquam gravida rhoncus erat quis volutpat.  Praesent varius mauris nec dui ornare ullamcorper. Sed tellus lectus, feugiat et suscipit quis, auctor sit amet tortor. Morbi dictum tortor hendrerit faucibus mollis. Integer sagittis orci quis sapien faucibus luctus. Suspendisse posuere, neque ut rutrum aliquam, ante lectus suscipit justo, et aliquet purus lacus vel nisl. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque non faucibus nisi. Quisque venenatis, tortor eget faucibus lacinia, leo arcu facilisis eros, eu condimentum purus velit vitae eros. Integer luctus suscipit nunc, non maximus tellus faucibus sit amet.  Maecenas ornare sit amet nibh eu efficitur. Aliquam quis tortor metus. In fringilla erat id sem pulvinar, sed laoreet felis viverra. Maecenas sodales gravida ante. Morbi maximus est et eros euismod faucibus. Nullam purus sem, euismod a orci id, sodales maximus sapien. Vivamus id erat vel ex interdum venenatis a efficitur magna. Praesent dictum eleifend tellus ut molestie. Nullam ornare nisi magna, ut faucibus odio luctus eu.  Nam elementum lorem vel dolor rutrum, eu semper est pellentesque. Donec accumsan varius ornare. Phasellus posuere convallis leo ac rhoncus. Mauris et varius ante, blandit finibus tellus. Sed auctor, massa tincidunt consequat consectetur, turpis erat mollis odio, vehicula ullamcorper felis ante ac augue. Sed lacinia auctor purus, quis sagittis velit pellentesque in. Morbi id convallis erat. Aenean diam odio, suscipit at imperdiet ac, maximus at felis. Etiam tristique porttitor placerat. Nunc accumsan id nulla et molestie. Praesent sagittis, dolor eu iaculis pulvinar, dui mi molestie justo, non pellentesque arcu magna ac felis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed elit risus, aliquam sed rhoncus vel, volutpat id lorem. Vivamus cursus consectetur sapien, at vehicula sem gravida hendrerit. Nullam at ligula nulla. Nulla aliquam aliquet ante, vitae maximus turpis vestibulum placerat.  Nunc posuere, arcu a rutrum maximus, massa est pharetra nunc, eu maximus felis justo et nisl. Suspendisse vehicula, risus congue vehicula mattis, neque urna luctus lacus, vitae venenatis orci ligula quis mi. Quisque eget nisl eget leo consectetur dapibus ac eu elit. Phasellus vitae neque suscipit, venenatis tellus ut, fringilla metus. Cras ac tincidunt justo. In turpis urna, rutrum in ipsum quis, fermentum feugiat massa. Cras pretium blandit augue, quis interdum lectus dictum quis. Proin laoreet id lectus eget euismod. Nullam suscipit sapien sed risus ultricies suscipit. In lobortis, diam ac vestibulum blandit, quam nisl lobortis odio, eget dignissim augue lectus vitae arcu. Aenean a ultricies ex, non faucibus nibh. Duis sed diam neque. Donec lacinia blandit ex nec convallis. Mauris pellentesque efficitur odio, et accumsan lorem hendrerit ac. Curabitur pretium et arcu in efficitur.  In hac habitasse platea dictumst. Nulla auctor eros lectus, a eleifend lacus tempus non. In cursus sagittis cursus. Nullam pharetra leo urna. Donec nec nisi quis tellus accumsan finibus. Duis ut magna dignissim, ornare augue non, fermentum arcu. Fusce interdum venenatis nibh, eu porta nulla vestibulum vel. Integer fringilla fermentum congue. In semper rutrum erat id facilisis. In nec libero vitae eros tempus vestibulum egestas sed tellus. Curabitur blandit dui mauris, sed maximus lacus scelerisque vitae. Vivamus id rhoncus est, et interdum nibh. Aliquam sollicitudin tristique quam ut vehicula. Duis a ornare arcu. Quisque vel dui eget dolor ultricies sagittis.  Vestibulum nec accumsan lorem, non lobortis quam. Ut vel vulputate orci, in semper lacus. Donec in pulvinar diam. Nunc nulla nunc, convallis a nisl in, ornare tristique leo. In lobortis accumsan lacus semper convallis. Maecenas in suscipit lorem. Sed bibendum elit eu dictum pharetra. Quisque egestas ante placerat diam blandit fringilla. Mauris molestie tempus est et lacinia. Cras pretium sem ac dictum semper. Integer rhoncus dignissim imperdiet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nunc semper eu leo sit amet fermentum.  Morbi id felis ligula. Morbi pellentesque eros eu enim vulputate, a ullamcorper velit tempor. Quisque consequat dapibus nulla, ac vestibulum sapien convallis ac. Sed purus tellus, imperdiet vitae nibh quis, bibendum pulvinar turpis. In in odio sit amet felis porttitor pellentesque. Morbi laoreet at mauris lobortis condimentum. Aliquam porta, mi nec mattis feugiat, eros mi luctus justo, et fringilla nibh est sed libero. Donec ante velit, sagittis rhoncus posuere ut, pretium hendrerit sem. Phasellus malesuada orci id hendrerit interdum. Vivamus enim magna, malesuada eu sapien quis, pulvinar fringilla dui. Aenean eget ipsum ipsum. Mauris non lacinia est, ac ullamcorper justo. Cras sit amet nisi ut justo condimentum efficitur sit amet sit amet dui. Nullam mauris ipsum, finibus non mollis a, bibendum vitae lectus. Sed a justo nec lacus aliquet consequat vel eget felis. In malesuada lobortis urna eu rutrum. Aenean et erat eros. Nulla quis lectus turpis. Phasellus commodo elit eget sapien aliquam, sit amet rutrum dui ultricies. Etiam sagittis rhoncus mauris, at laoreet lorem placerat sit amet. Donec dictum ultricies convallis. Curabitur sed tempus purus, ac pellentesque ligula. Proin augue nibh, ultrices non nulla et, varius pharetra risus. Integer auctor tortor a finibus feugiat. Phasellus pretium diam id urna faucibus, quis faucibus tortor dignissim. Cras fermentum ultrices iaculis. Maecenas ut rhoncus dolor. Mauris quis odio consectetur, congue enim sed.   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vel accumsan nisi. Phasellus molestie tortor mauris, quis consequat risus congue vel. Proin ac eros justo. Sed ullamcorper nec dolor ac finibus. Sed ut orci aliquam, pellentesque odio faucibus, tristique nibh. Praesent faucibus mollis ante, sit amet ullamcorper urna interdum at. Quisque malesuada dui risus, vitae blandit mauris facilisis eu. Donec quis tellus laoreet, viverra mauris nec, semper mi. Maecenas malesuada blandit dui non aliquam. Duis dapibus cursus augue a efficitur. Nam a vulputate leo. Ut sed elementum sem. Mauris at risus ut nulla dignissim pretium. In at dolor eu dui lobortis tempor a vel sapien.  </p>
+</div>
+
+<div class='footer'>
+Created by Kelly Kapshandy
+</div>
+
+</body>
