--- a/resume/index.html
+++ b/resume/index.html
@@ -14,7 +14,7 @@
 
 <nav class='navigation'>
 <ul>
-	<li> <a href="./index.html" target="_blank">Home</a> </li>
+	<li> <a href="../index.html" target="_blank">Home</a> </li>
 	<li> <a href="../Blog" target="_blank">Blog</a> </li>
     <li> <a href="../About" target="_blank">About Me</a> </li>
     <li> <a href="../Contact" target="_blank">Contact</a> </li>
