--- a/About/index.html
+++ b/About/index.html
@@ -2,22 +2,32 @@
 <html>
 <head>
 	<title>About Me</title>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 
-<h1>About Me</h1>
+<div class='pageheader'>
+    <h1>Let's make the best of this situation</h1>
+    <h2>Before I finally go insane</h2>
+</div>
 
-<nav>
-    <a href="http://www.goodhousekeeping.com" target="_blank">Good Housekeeping</a>
-    <a href="Http://www.linkedin.com/in/kellykapshandy" target="_blank">LinkedIn</a>
-    <a href="Http://www.kellykapshandy.com/Blog" target="_blank">Blog</a>
+<nav class='navigation'>
+<ul>
+    <li> <a href="./index.html">Home</a> </li>
+    <li> <a href="./Blog" target="_blank">Blog</a> </li>
+    <li> <a href="./About" target="_blank">About Me</a> </li>
+    <li> <a href="./Contact" target="_blank">Contact</a> </li>
+    <li> <a href="./resume" target="_blank">Resume</a> </li>
+</ul>
 </nav>
 
-<body>
-    <h2>Animals I Like</h2>
-	<ul>
-        <li>Dog</li>
-        <li>Monkey</li>
-        <li>Otter</li>
-    </ul>
+<div class='blog'>
+    <h3>About Me</h3>
+    <p>Test</p>
+</div>
+
+<div class='footer'>
+Created by Kelly Kapshandy
+</div>
+
 </body>
 </html>
