--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Kelly Kapshandy</title>
+	<title>About Me</title>
 	<link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 
@@ -32,3 +32,4 @@ Created by Kelly Kapshandy
 </div>
 
 </body>
+</html>
