--- a/resume/index.html
+++ b/resume/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+z<!DOCTYPE html>
 <html>
 <head>
 	<title>Blog</title>
@@ -18,7 +18,6 @@
 	<li> <a href="../Blog" target="_blank">Blog</a> </li>
     <li> <a href="../About" target="_blank">About Me</a> </li>
     <li> <a href="../Contact" target="_blank">Contact</a> </li>
-    <li> <a href="../Coffee" target="_blank">Anchor Test Page</a> </li>
 </ul>
 </nav>
 
