--- a/resume/index.html
+++ b/resume/index.html
@@ -1,102 +1,137 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Blog</title>
-	<link rel="stylesheet" type="text/css" href="style.css"/>
-</head>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Kelly Kapshandy Homepage</title>
 
-<body>
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 
-<div class='pageheader'>
-	<h1>Let's make the best of this situation</h1>
-	<h2>Before I finally go insane</h2>
-</div>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+  
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Kelly Kapshandy // Marketing Guru - Innovation Enthusiast - News Junkie</a>
+    </div>
 
-<nav class='navigation'>
-<ul>
-	<li> <a href="../index.html" target="_blank">Home</a> </li>
-	<li> <a href="../Blog" target="_blank">Blog</a> </li>
-    <li> <a href="../About" target="_blank">About Me</a> </li>
-    <li> <a href="../Contact" target="_blank">Contact</a> </li>
-</ul>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+ 
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="../index.html" target="_blank">Home</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="../About" target="_blank">About Me</a></li>
+            <li><a href="../resume" target="_blank">Resume</a></li>
+            <li><a href="../Blog" target="_blank">Blog</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
 </nav>
 
 <div class='blog'>
 
 <nav class='resumenav'>
 <ul>
-	<li><a href="#experience">Experience<a/></li>
-	<li><a href="#education">Education<a/></li>
-	<li><a href="#language">Language<a/></li>
-	<li><a href="#volunteer">Volunteer Work<a/></li>
+  <li><a href="#experience">Experience<a/></li>
+  <li><a href="#education">Education<a/></li>
+  <li><a href="#language">Language<a/></li>
+  <li><a href="#volunteer">Volunteer Work<a/></li>
 </ul>
 </nav>
 
 <br>
 
-	<h2 id='experience'>EXPERIENCE</h2>
-	<h3>HEARST CORPORATION &ndash; Chicago, IL</h3>
-	<h4>Integrated Account Manager &ndash; Good Housekeeping & Country Living<br>
-	<i>March 2013&ndash;Present</i></h4>
-		<ul>
-		<li>Relationship Development: Built/maintained key Fortune 100, leading ad agency accounts across diverse industry portfolio.</li>
-		<li>Ground-Breaking: Sold first-to-market &#34;expandable cover&#34; unit to top national beauty advertiser in Q3 2014.</li>
-		<li>Growth Driven: Expanded existing and new business, exceeding revenue expectations by each quarter in 2014.</li>
-		<li>Sales: Sold Good Housekeeping and Country Living print, digital, and brand extensions to 75+ active accounts.</li>
-		<li>Organization: Managed full CRM of 150+ accounts.</li>
-		</ul>
+  <h2 id='experience'>EXPERIENCE</h2>
+  <h3>HEARST CORPORATION &ndash; Chicago, IL</h3>
+  <h4>Integrated Account Manager &ndash; Good Housekeeping & Country Living<br>
+  <i>March 2013&ndash;Present</i></h4>
+    <ul>
+    <li>Relationship Development: Built/maintained key Fortune 100, leading ad agency accounts across diverse industry portfolio.</li>
+    <li>Ground-Breaking: Sold first-to-market &#34;expandable cover&#34; unit to top national beauty advertiser in Q3 2014.</li>
+    <li>Growth Driven: Expanded existing and new business, exceeding revenue expectations by each quarter in 2014.</li>
+    <li>Sales: Sold Good Housekeeping and Country Living print, digital, and brand extensions to 75+ active accounts.</li>
+    <li>Organization: Managed full CRM of 150+ accounts.</li>
+    </ul>
 
-	<h3>STARCOM MEDIAVEST GROUP &ndash; Chicago, IL</h3>
-	<h4>Supervisor &ndash; Procter & Gamble, Sight, Sound, and Motion Agency of Record &ndash; Publishing <br>
-	<i>August 2012&ndash;March 2013</i></h4>
-		<ul>
-		<li>Management: Directed a team of 2 Associates and 4 Liaisons, focusing on promoting experience, career growth.</li>
-		<li>Marketplace Stewardship: Managed P&G relationship with the marketplace and ran the monthly contracting of P&G Publishing activity, ensuring accuracy for multi-million dollar contracts for largest advertiser in North America.</li>
-		<li>Rate Negotiations: Negotiated rates/incentive packages with key partners driving YOY growth, delivering client savings.</li>
-		<li>Marketplace Research: Researched industry landscape for quarterly client updates, including ethnic marketplace, tablet and digital innovations, and emerging media and consumer trends.</li>
-		</ul>
+  <h3>STARCOM MEDIAVEST GROUP &ndash; Chicago, IL</h3>
+  <h4>Supervisor &ndash; Procter & Gamble, Sight, Sound, and Motion Agency of Record &ndash; Publishing <br>
+  <i>August 2012&ndash;March 2013</i></h4>
+    <ul>
+    <li>Management: Directed a team of 2 Associates and 4 Liaisons, focusing on promoting experience, career growth.</li>
+    <li>Marketplace Stewardship: Managed P&G relationship with the marketplace and ran the monthly contracting of P&G Publishing activity, ensuring accuracy for multi-million dollar contracts for largest advertiser in North America.</li>
+    <li>Rate Negotiations: Negotiated rates/incentive packages with key partners driving YOY growth, delivering client savings.</li>
+    <li>Marketplace Research: Researched industry landscape for quarterly client updates, including ethnic marketplace, tablet and digital innovations, and emerging media and consumer trends.</li>
+    </ul>
 
-	<h4>Media Associate &ndash; Procter & Gamble, Sight, Sound, and Motion Agency of Record &ndash; Publishing<br>
-	<i>November 2009&ndash;September 2011</i></h4>
-		<ul>
-		<li>Media Planning: Managed $245MM in measured print spend for Olay and Pringles in National and Regional Print.</li>
-		<li>Scale: Leveraged media spend to negotiate strategic added value for additional brand exposure.</li>
-		<li>Marketplace Communication: Shared key objectives with media partners to maintain competitive advantage, often securing opportunities over competitors.</li>
-		<li>Budget Development: Analyzed spending to develop a future budget based on brand goals and marketplace inflation.</li>
-		</ul>
+  <h4>Media Associate &ndash; Procter & Gamble, Sight, Sound, and Motion Agency of Record &ndash; Publishing<br>
+  <i>November 2009&ndash;September 2011</i></h4>
+    <ul>
+    <li>Media Planning: Managed $245MM in measured print spend for Olay and Pringles in National and Regional Print.</li>
+    <li>Scale: Leveraged media spend to negotiate strategic added value for additional brand exposure.</li>
+    <li>Marketplace Communication: Shared key objectives with media partners to maintain competitive advantage, often securing opportunities over competitors.</li>
+    <li>Budget Development: Analyzed spending to develop a future budget based on brand goals and marketplace inflation.</li>
+    </ul>
 
-	<h3>CHICAGO 2016 OLYMPIC BID &ndash; Chicago, IL</h3>
-	<h4>Intern/Staff Volunteer<br>
-	<i>January 2008&ndash;October 2009</i></h4>
-		<ul>
-		<li>Events: Assisted in executing events within the organization, including Final Friday Meetings and IOC evaluation visit.</li>
-		<li>Leadership: Organized, led student registration campaign of the Notre Dame chapter of Students Support Chicago 2016.</li>
-		<li>Outreach: Contacted universities, governing boards to expand Olympian Outreach, far surpassing goal of 2016 supporters.</li>
-		</ul>	
+  <h3>CHICAGO 2016 OLYMPIC BID &ndash; Chicago, IL</h3>
+  <h4>Intern/Staff Volunteer<br>
+  <i>January 2008&ndash;October 2009</i></h4>
+    <ul>
+    <li>Events: Assisted in executing events within the organization, including Final Friday Meetings and IOC evaluation visit.</li>
+    <li>Leadership: Organized, led student registration campaign of the Notre Dame chapter of Students Support Chicago 2016.</li>
+    <li>Outreach: Contacted universities, governing boards to expand Olympian Outreach, far surpassing goal of 2016 supporters.</li>
+    </ul> 
 
-	<h3>KBK RESEARCH &ndash; Chicago, IL</h3>
-	<h4>Independent Researcher<br>
-	<i>December 2004&ndash;November 2009</i></h4>
-		<ul>
-		<li>Research: Provided historical research and document review for clients (primarily General Electric).</li>
-		</ul>
+  <h3>KBK RESEARCH &ndash; Chicago, IL</h3>
+  <h4>Independent Researcher<br>
+  <i>December 2004&ndash;November 2009</i></h4>
+    <ul>
+    <li>Research: Provided historical research and document review for clients (primarily General Electric).</li>
+    </ul>
 
-	<h2 id='education'>EDUCATION</h2>
-	<h3>University of Notre Dame &ndash; May 2009</h3>
-	<h4><i>B.A., American Studies & B.A., Spanish Literature</i></h4>
-	<br>
+  <h2 id='education'>EDUCATION</h2>
+  <h3>University of Notre Dame &ndash; May 2009</h3>
+  <h4><i>B.A., American Studies & B.A., Spanish Literature</i></h4>
+  <br>
 
-	<h2 id='language'>LANGUAGE</h2>
-	<h3>Native Spanish speaker, <i>fluent</i></h3>
-	<br>
+  <h2 id='language'>LANGUAGE</h2>
+  <h3>Native Spanish speaker, <i>fluent</i></h3>
+  <br>
 
-	<h2 id='volunteer'>Volunteer Work</h2>
-	<h3>Junior Board, Catholic Charities of Chicago</h3>
-	
+  <h2 id='volunteer'>Volunteer Work</h2>
+  <h3>Junior Board, Catholic Charities of Chicago</h3>
+  
 </div>
 
-<div class='footer'>
-Created by Kelly Kapshandy
-</div>
 
-</body>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+  </body>
+</html>
