--- a/index.html
+++ b/index.html
@@ -1,35 +1,65 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>About Me</title>
-	<link rel="stylesheet" type="text/css" href="style.css"/>
-</head>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Kelly Kapshandy Homepage</title>
 
-<body>
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 
-<div class='pageheader'>
-	<h1>Let's make the best of this situation</h1>
-	<h2>Before I finally go insane</h2>
-</div>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+  
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Kelly Kapshandy // Marketing Guru - Innovation Enthusiast - News Junkie</a>
+    </div>
 
-<nav class='navigation'>
-<ul>
-	<li> <a href="./index.html">Home</a> </li>
-	<li> <a href="./Blog" target="_blank">Blog</a> </li>
-    <li> <a href="./About" target="_blank">About Me</a> </li>
-    <li> <a href="./Contact" target="_blank">Contact</a> </li>
-    <li> <a href="./resume" target="_blank">Resume</a> </li>
-</ul>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+ 
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="../index.html" target="_blank">Home</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="../About" target="_blank">About Me</a></li>
+            <li><a href="../resume" target="_blank">Resume</a></li>
+            <li><a href="../Blog" target="_blank">Blog</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
 </nav>
 
-<div class='blog'>
-	<h3>Test</h3>
-	<p>Test</p>
-</div>
+<img src="images/Dome.jpg"/>
 
-<div class='footer'>
-Created by Kelly Kapshandy
-</div>
 
-</body>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
