--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<img src="images/Dome.jpg"/>
+<img src="Images/Dome.jpg"/>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
