--- a/index.html
+++ b/index.html
@@ -23,22 +23,25 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      
+      <a class="navbar-brand" href="#"><p>Kelly Kapshandy</p><p class="subtitle-hide"> // Marketing Guru - Innovation Enthusiast - News Junkie</p></a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+
+ 
+      <ul class="nav">
+        <li><a href="../index.html" target="_blank">Home</a></li>
+        <li class="dropdown">
+        </li>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+          	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Kelly Kapshandy // Marketing Guru - Innovation Enthusiast - News Junkie</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
- 
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="../index.html" target="_blank">Home</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu <span class="caret"></span></a>
+          </a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="../About" target="_blank">About Me</a></li>
             <li><a href="../resume" target="_blank">Resume</a></li>
@@ -48,14 +51,14 @@
             <li class="divider"></li>
             <li><a href="#">One more separated link</a></li>
           </ul>
-        </li>
       </ul>
-    </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 
-<img src="Images/Dome.jpg"/>
-
+<div class="imagecontainer">
+	<img src="Images/Dome.jpg"/>
+	<span><h1>News Junkie</h1><h1>Marketing Guru</h1> <h1>Innovation Enthusiast</h1> </span>
+</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
