--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       
-      <a class="navbar-brand" href="#"><p>Kelly Kapshandy</p><p class="subtitle-hide"> // Marketing Guru - Innovation Enthusiast - News Junkie</p></a>
+      <a class="navbar-brand" href="#"><span>Kelly Kapshandy</span><span class="subtitle-hide"> // Marketing Guru - Innovation Enthusiast - News Junkie</span></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
