--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -24,7 +25,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       
-      <a class="navbar-brand" href="#"><span>Kelly Kapshandy</span><span class="subtitle-hide"> // Marketing Guru - Innovation Enthusiast - News Junkie</span></a>
+      <a class="navbar-brand" href="#"><span class="name">Kelly Kapshandy</span><span class="subtitle-hide"> // Marketing Guru - Innovation Enthusiast - News Junkie</span></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
