--- a/resume/index.html
+++ b/resume/index.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -16,6 +17,18 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-49851056-3', 'auto');
+  ga('send', 'pageview');
+
+</script>
+  
   </head>
   <body>
   
@@ -23,22 +36,25 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      
+      <a class="navbar-brand" href="#"><span class="name">Kelly Kapshandy</span><span class="subtitle-hide"> // Marketing Guru - Innovation Enthusiast - News Junkie</span></a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+
+ 
+      <ul class="nav">
+        <li><a href="../index.html" target="_blank">Home</a></li>
+        <li class="dropdown">
+        </li>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Kelly Kapshandy // Marketing Guru - Innovation Enthusiast - News Junkie</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
- 
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="../index.html" target="_blank">Home</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu <span class="caret"></span></a>
+          </a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="../About" target="_blank">About Me</a></li>
             <li><a href="../resume" target="_blank">Resume</a></li>
@@ -48,28 +64,18 @@
             <li class="divider"></li>
             <li><a href="#">One more separated link</a></li>
           </ul>
-        </li>
       </ul>
-    </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 
-<img src="images/Dome.jpg"/>
+<div class="imagecontainer">
+  <img src="images/fish.jpg"/>
+  <span><h1>News Junkie</h1><h1>Marketing Guru</h1> <h1>Innovation Enthusiast</h1> </span>
+</div>
 
-<div class='blog'>
-
-<nav class='resumenav'>
-<ul>
-  <li><a href="#experience">Experience<a/></li>
-  <li><a href="#education">Education<a/></li>
-  <li><a href="#language">Language<a/></li>
-  <li><a href="#volunteer">Volunteer Work<a/></li>
-</ul>
-</nav>
-
-<br>
-
-  <h2 id='experience'>EXPERIENCE</h2>
+<div class="blogcontainer">
+<div class="blog">
+<h2 id='experience'>EXPERIENCE</h2>
   <h3>HEARST CORPORATION &ndash; Chicago, IL</h3>
   <h4>Integrated Account Manager &ndash; Good Housekeeping & Country Living<br>
   <i>March 2013&ndash;Present</i></h4>
@@ -129,12 +135,11 @@
   <h3>Junior Board, Catholic Charities of Chicago</h3>
   
 </div>
-
+</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-  
   </body>
 </html>
