--- a/resume/index.html
+++ b/resume/index.html
@@ -92,7 +92,7 @@
   <i>August 2012&ndash;March 2013</i></h4>
     <ul>
     <li><i>Management</i>:: Directed a team of 2 Associates and 4 Liaisons, focusing on promoting experience, career growth.</li>
-    <li>M<i>arketplace Stewardship</i>:: Managed P&G relationship with the marketplace and ran the monthly contracting of P&G Publishing activity, ensuring accuracy for multi-million dollar contracts for largest advertiser in North America.</li>
+    <li><i>Marketplace Stewardship</i>:: Managed P&G relationship with the marketplace and ran the monthly contracting of P&G Publishing activity, ensuring accuracy for multi-million dollar contracts for largest advertiser in North America.</li>
     <li><i>Rate Negotiations</i>:: Negotiated rates/incentive packages with key partners driving YOY growth, delivering client savings.</li>
     <li><i>Marketplace Research</i>:: Researched industry landscape for quarterly client updates, including ethnic marketplace, tablet and digital innovations, and emerging media and consumer trends.</li>
     </ul>
