--- a/resume/index.html
+++ b/resume/index.html
@@ -80,46 +80,46 @@
   <h4>Integrated Account Manager &ndash; Good Housekeeping & Country Living<br>
   <i>March 2013&ndash;Present</i></h4>
     <ul>
-    <li><i>Relationship Development</i>:: Built/maintained key Fortune 100, leading ad agency accounts across diverse industry portfolio.</li>
-    <li><i>Ground-Breaking</i>:: Sold first-to-market &#34;expandable cover&#34; unit to top national beauty advertiser in Q3 2014.</li>
-    <li><i>Growth Driven</i>:: Expanded existing and new business, exceeding revenue expectations by each quarter in 2014.</li>
-    <li><i>Sales</i>:: Sold Good Housekeeping and Country Living print, digital, and brand extensions to 75+ active accounts.</li>
-    <li><i>Organization</i>:: Managed full CRM of 150+ accounts.</li>
+    <li><i>Relationship Development:</i> Built/maintained key Fortune 100, leading ad agency accounts across diverse industry portfolio.</li>
+    <li><i>Ground-Breaking:</i> Sold first-to-market &#34;expandable cover&#34; unit to top national beauty advertiser in Q3 2014.</li>
+    <li><i>Growth Driven:</i> Expanded existing and new business, exceeding revenue expectations by each quarter in 2014.</li>
+    <li><i>Sales:</i> Sold Good Housekeeping and Country Living print, digital, and brand extensions to 75+ active accounts.</li>
+    <li><i>Organization:</i> Managed full CRM of 150+ accounts.</li>
     </ul>
 
   <h3>STARCOM MEDIAVEST GROUP &ndash; Chicago, IL</h3>
   <h4>Supervisor &ndash; Procter & Gamble, Sight, Sound, and Motion Agency of Record &ndash; Publishing <br>
   <i>August 2012&ndash;March 2013</i></h4>
     <ul>
-    <li><i>Management</i>:: Directed a team of 2 Associates and 4 Liaisons, focusing on promoting experience, career growth.</li>
-    <li><i>Marketplace Stewardship</i>:: Managed P&G relationship with the marketplace and ran the monthly contracting of P&G Publishing activity, ensuring accuracy for multi-million dollar contracts for largest advertiser in North America.</li>
-    <li><i>Rate Negotiations</i>:: Negotiated rates/incentive packages with key partners driving YOY growth, delivering client savings.</li>
-    <li><i>Marketplace Research</i>:: Researched industry landscape for quarterly client updates, including ethnic marketplace, tablet and digital innovations, and emerging media and consumer trends.</li>
+    <li><i>Management:</i> Directed a team of 2 Associates and 4 Liaisons, focusing on promoting experience, career growth.</li>
+    <li><i>Marketplace Stewardship:</i> Managed P&G relationship with the marketplace and ran the monthly contracting of P&G Publishing activity, ensuring accuracy for multi-million dollar contracts for largest advertiser in North America.</li>
+    <li><i>Rate Negotiations:</i> Negotiated rates/incentive packages with key partners driving YOY growth, delivering client savings.</li>
+    <li><i>Marketplace Research:</i> Researched industry landscape for quarterly client updates, including ethnic marketplace, tablet and digital innovations, and emerging media and consumer trends.</li>
     </ul>
 
   <h4>Media Associate &ndash; Procter & Gamble, Sight, Sound, and Motion Agency of Record &ndash; Publishing<br>
   <i>November 2009&ndash;September 2011</i></h4>
     <ul>
-    <li><i>Media Planning</i>:: Managed $245MM in measured print spend for Olay and Pringles in National and Regional Print.</li>
-    <li><i>Scale</i>:: Leveraged media spend to negotiate strategic added value for additional brand exposure.</li>
-    <li><i>Marketplace Communication</i>:: Shared key objectives with media partners to maintain competitive advantage, often securing opportunities over competitors.</li>
-    <li><i>Budget Development</i>:: Analyzed spending to develop a future budget based on brand goals and marketplace inflation.</li>
+    <li><i>Media Planning:</i> Managed $245MM in measured print spend for Olay and Pringles in National and Regional Print.</li>
+    <li><i>Scale:</i> Leveraged media spend to negotiate strategic added value for additional brand exposure.</li>
+    <li><i>Marketplace Communication:</i> Shared key objectives with media partners to maintain competitive advantage, often securing opportunities over competitors.</li>
+    <li><i>Budget Development:</i> Analyzed spending to develop a future budget based on brand goals and marketplace inflation.</li>
     </ul>
 
   <h3>CHICAGO 2016 OLYMPIC BID &ndash; Chicago, IL</h3>
   <h4>Intern/Staff Volunteer<br>
   <i>January 2008&ndash;October 2009</i></h4>
     <ul>
-    <li><i>Events</i>:: Assisted in executing events within the organization, including Final Friday Meetings and IOC evaluation visit.</li>
-    <li><i>Leadership</i>:: Organized, led student registration campaign of the Notre Dame chapter of Students Support Chicago 2016.</li>
-    <li><i>Outreach</i>:: Contacted universities, governing boards to expand Olympian Outreach, far surpassing goal of 2016 supporters.</li>
+    <li><i>Events:</i> Assisted in executing events within the organization, including Final Friday Meetings and IOC evaluation visit.</li>
+    <li><i>Leadership:</i> Organized, led student registration campaign of the Notre Dame chapter of Students Support Chicago 2016.</li>
+    <li><i>Outreach</i> Contacted universities, governing boards to expand Olympian Outreach, far surpassing goal of 2016 supporters.</li>
     </ul> 
 
   <h3>KBK RESEARCH &ndash; Chicago, IL</h3>
   <h4>Independent Researcher<br>
   <i>December 2004&ndash;November 2009</i></h4>
     <ul>
-    <li><i>Research</i>: Provided historical research and document review for clients (primarily General Electric).</li>
+    <li><i>Research:</i> Provided historical research and document review for clients (primarily General Electric).</li>
     </ul>
 
   <h2 id='education'>EDUCATION</h2>
