--- a/resume/index.html
+++ b/resume/index.html
@@ -97,7 +97,17 @@
     <li><i>Marketplace Research:</i> Researched industry landscape for quarterly client updates, including ethnic marketplace, tablet and digital innovations, and emerging media and consumer trends.</li>
     </ul>
 
-  <h4>Media Associate &ndash; Procter & Gamble, Sight, Sound, and Motion Agency of Record &ndash; Publishing<br>
+
+  <h4>Media Associate &ndash; Sara Lee Strategy Team<br>
+  <i>September 2011&ndash;July 2012</i></h4>
+  <ul>
+    <li><i>Media Strategy:</i> Built holistic media plans for multi-million dollar Ball Park Franks account, emphasis on Digital & Video.</li>
+    <li><i>Award&ndash;Winning:</i> Awarded 2013 North American Effie, Silver—Packaged Food.</li>
+    <li><i>Innovation:</i> Researched industry innovation and integrated into media plan, including Tablets and Advanced TV.</li>
+    <li><i>Competitive Analysis:</i> Analyzed media spend of 6-8 key national competitors monthly/yearly to drive strategy.</li>
+  </ul>
+
+  <h4>Media Associate &ndash; Procter & Gamble, Sight, Sound, & Motion Agency of Record &ndash; Publishing<br>
   <i>November 2009&ndash;September 2011</i></h4>
     <ul>
     <li><i>Media Planning:</i> Managed $245MM in measured print spend for Olay and Pringles in National and Regional Print.</li>
