--- a/resume/index.html
+++ b/resume/index.html
@@ -137,10 +137,13 @@
   <h4><i>B.A., American Studies & B.A., Spanish Literature</i></h4>
 
   <h2 id='language'>LANGUAGE</h2>
-  <h3>Native Spanish speaker, <i>fluent</i></h3>
+  <h3>Native Spanish speaker &ndash; <i>fluent</i></h3>
 
   <h2 id='volunteer'>Volunteer Work</h2>
   <h3>Junior Board, Catholic Charities of Chicago</h3>
+
+  <h2>Web Design</h2>
+  <h3>HTML, CSS, Bootstrap &ndash; <i>proficient</i></h3>
   
 </div>
 </div>
