--- a/resume/index.html
+++ b/resume/index.html
@@ -122,7 +122,7 @@
     <ul>
     <li><i>Events:</i> Assisted in executing events within the organization, including Final Friday Meetings and IOC evaluation visit.</li>
     <li><i>Leadership:</i> Organized, led student registration campaign of the Notre Dame chapter of Students Support Chicago 2016.</li>
-    <li><i>Outreach</i> Contacted universities, governing boards to expand Olympian Outreach, far surpassing goal of 2016 supporters.</li>
+    <li><i>Outreach:</i> Contacted universities, governing boards to expand Olympian Outreach, far surpassing goal of 2016 supporters.</li>
     </ul> 
 
   <h3>KBK RESEARCH &ndash; Chicago, IL</h3>
