--- a/About/index.html
+++ b/About/index.html
@@ -69,7 +69,7 @@
 </nav>
 
 <div class="imagecontainer">
-  <img src="images/traversecity.jpg"/>
+  <img src="Images/traversecity.jpg"/>
   <span><h1>News Junkie</h1><h1>Marketing Guru</h1> <h1>Innovation Enthusiast</h1> </span>
 </div>
 
