--- a/About/index.html
+++ b/About/index.html
@@ -75,11 +75,10 @@
 
 <div class="blogcontainer">
 <div class="blog">
-  <h2>header header header</h2>
-  <h3>second header second header</h3>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultrices mauris metus. Phasellus quis ipsum eget leo ullamcorper convallis nec pellentesque lacus. Phasellus sed aliquam lorem. Nulla eleifend consequat elementum. Fusce felis nisl, imperdiet non velit non, placerat dapibus sapien. Praesent metus felis, cursus sit amet fringilla quis, porttitor nec metus. Aenean vitae fermentum augue. Etiam non arcu nec massa sollicitudin vehicula volutpat ut augue.
-
-  <p>Maecenas scelerisque eros vel turpis interdum luctus. Donec libero neque, mollis ut nisi quis, pellentesque semper eros. Aliquam sed dolor eu lorem fermentum blandit cursus ut nulla. Curabitur non cursus nisl. Morbi facilisis augue vitae lobortis bibendum. Integer aliquam condimentum mauris, quis malesuada lectus. Integer enim justo, mollis et tortor a, interdum vulputate ex. Aliquam erat volutpat. In hac habitasse platea dictumst. Aliquam vel enim et ante pharetra pharetra vitae sed nibh. Etiam a bibendum tellus, vitae malesuada lacus. Praesent ultricies sem felis, vel ultricies lectus lacinia in. Aliquam pretium est sapien, eget aliquet erat mattis ac.</p>
+  <h2>Make your own kind of music</h2>
+  <h3>Even if nobody else sings along</h3>
+  
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultrices mauris metus. Phasellus quis ipsum eget leo ullamcorper convallis nec pellentesque lacus. Phasellus sed aliquam lorem. Nulla eleifend consequat elementum. Fusce felis nisl, imperdiet non velit non, placerat dapibus sapien. Praesent metus felis, cursus sit amet fringilla quis, porttitor nec metus. Aenean vitae fermentum augue. Etiam non arcu nec massa sollicitudin vehicula volutpat ut augue.</p>
 
 </div>
 
